@@ -104,6 +104,7 @@ class Pyclewn(ClewnTestCase):
             ]
         expected = (
             'C           *          custom    call s:nbcommand("", <f-args>)',
+            'Cballooneval *                   call s:nbcommand("ballooneval", <f-args>)',
             'Cbreak      *          file      call s:nbcommand("break", <f-args>)',
             'Ccontinue   *                    call s:nbcommand("continue", <f-args>)',
             'Cdbgvar     *                    call s:nbcommand("dbgvar", <f-args>)',
